meta tag content

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Dana Sevcik // Software Engineer"
+      content="Dana Sevcik - portfolio website for female fullstack software engineer in New York City to showcase technical projects"
     />
     <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
     <!--
